k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-app-ingress
  namespace: shopping-app
spec:
  ingressClassName: nginx
  rules:
    - host: shopping-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shopfront
                port:
                  number: 8010
